<resources>
    <string name="app_name">신작</string>
    <string name="kakao_native_key">kakaof4e54dad18c8af8a67dccb0176283616</string>
    <string name="str_menu_home">홈</string>
    <string name="str_menu_market">마켓</string>
    <string name="ic_menu_outsourcing">의뢰</string>
    <string name="ic_menu_chat">채팅</string>
    <string name="ic_menu_profile">프로필</string>
    <string name="str_art_refer_title">%s님을 위한 맞춤 거래</string>
    <string name="str_art_onmarket_title">지금 거래중</string>
    <string name="str_home_artist_title">내가 팔로잉하는 작가</string>
    <string name="str_market_btn_onsale">판매중 작품만 보기</string>
    <string name="str_sort_by_refer">신작추천순</string>
    <string name="str_sort_by_fame">인기순</string>
    <string name="str_sort_by_recent">최신순</string>
    <string name="str_sort_by_lowprice">낮은가격순</string>
    <string name="str_sort_by_highprice">높은가격순</string>
    <string name="str_market_search_hint">작품 통합 검색</string>
    <string name="str_market_search_history_title">최근 검색어</string>
    <string name="str_market_history_delete">전체 삭제</string>
    <string name="str_market_content_null">검색 결과가 없어요</string>
    <string name="str_notification">알림</string>
    <string name="str_notification_activity">활동</string>
    <string name="str_notification_follow">팔로우</string>
    <string name="str_notification_follow_form">%s 님이 작가님을 팔로우해요</string>
    <string name="str_profile_follower">팔로워</string>
    <string name="str_profile_following">팔로잉</string>
    <string name="str_profile_follow">팔로잉</string>
    <string name="str_profile_unfollow">팔로우</string>
    <string name="str_profile_chat">채팅하기</string>
    <string name="str_profile_edit">프로필 편집</string>
    <string name="str_profile_scrap">스크랩 목록</string>
    <string name="str_profile_outsourcing">의뢰해요</string>
    <string name="str_profile_sale_title">판매 작품</string>
    <string name="str_profile_work_title">작업해요</string>
    <string name="str_profile_verify_true">verified</string>
    <string name="str_profile_verify_false">unverified</string>
    <string name="str_follow_username">%s</string>
    <string name="str_sale_onsale_true">판매중</string>
    <string name="str_sale_onsale_false">판매완료</string>
    <string name="str_sale_content_null">작품이 없어요</string>
    <string name="str_work_onwork_true">작업중</string>
    <string name="str_work_onwork_false">작업완료</string>
    <string name="str_work_content_null">작업이 없어요</string>
    <string name="str_request_complete_false">의뢰중</string>
    <string name="str_request_complete_true">의뢰완료</string>
    <string name="str_request_content_null">의뢰가 없어요</string>
    <string name="str_sale_product_holder_btn">거래 완료하기</string>
    <string name="str_sale_work_holder_btn">모집 완료하기</string>
    <string name="str_scrap_content_null">스크랩한 작품이 없어요</string>
    <string name="str_edit_profile_img">프로필 사진 바꾸기</string>
    <string name="str_edit_nickname">닉네임</string>
    <string name="str_edit_introduction">소개</string>
    <string name="str_edit_introduction_length">%d/100</string>
    <string name="str_edit_auth_true">인증완료</string>
    <string name="str_edit_auth_false">인증하기</string>
    <string name="str_edit_school">학교</string>
    <string name="str_edit_genre">관심장르</string>
    <string name="str_edit_apply_verify">인증 작가 신청하기</string>
    <string name="str_setting">설정</string>
    <string name="str_setting_group_personal">개인 설정</string>
    <string name="str_setting_account">연결된 계정 관리</string>
    <string name="str_setting_manage_block">차단 사용자 관리</string>
    <string name="str_setting_blocklist">차단된 사용자</string>
    <string name="str_setting_unblock">차단 해제</string>
    <string name="str_setting_group_app">이용 안내</string>
    <string name="str_setting_app_version">앱 버전</string>
    <string name="str_setting_contact_us">문의하기</string>
    <string name="str_setting_announce">공지사항</string>
    <string name="str_setting_app_service">서비스 이용약관</string>
    <string name="str_setting_info_use">개인정보 처리방침</string>
    <string name="str_setting_license">오픈소스 라이선스</string>
    <string name="str_setting_group_etc">기타</string>
    <string name="str_setting_withdrawal">회원 탈퇴</string>
    <string name="str_setting_logout">로그아웃</string>
    <string name="str_resign">탈퇴하기</string>
    <string name="str_resign_title_first">정말로\n탈퇴하시겠습니까?</string>
    <string name="str_resign_title_second">탈퇴가 완료되었습니다</string>
    <string name="str_resign_desc_first">· 탈퇴 시 더 이상 해당 계정에 접근할 수 없어요.</string>
    <string name="str_resign_desc_second">· 탈퇴 시 작성된 게시물, 채팅 등이 전부 사라져요.</string>
    <string name="str_certification">학교 인증</string>
    <string name="str_certification_school">학교 이름</string>
    <string name="str_certification_school_hint">학교 이름을 검색하세요.</string>
    <string name="str_webMail_type_select">인증 방식 선택</string>
    <string name="str_webMail_type_mail">학교 웹메일 인증</string>
    <string name="str_webMail_type_school_id">학생증 인증</string>
    <string name="str_webMail_explain">이메일을 입력하면 인증 메일을 보내드립니다.\n이메일에 포함된 인증번호 확인 후 입력해주세요.</string>
    <string name="str_webMail_hint">학교 메일을 입력해주세요.</string>
    <string name="str_webMail_validation">올바른 형식의 메일을 입력하세요.</string>
    <string name="str_webMail_send_message">인증메일이 전송되었습니다</string>
    <string name="str_webMail_code">인증번호</string>
    <string name="str_webMail_code_hint">4자리 인증번호를 입력해주세요.</string>
    <string name="str_webMail_code_err">다시 입력해주세요.</string>
    <string name="str_webMail_code_complete">인증 완료!</string>
    <string name="str_webMail_schoolId_explain">모바일 학생증 캡쳐 화면 또는 실물 학생증 사진을\n업로드해주세요. 2~3일 내에 승인이 완료됩니다.</string>
    <string name="str_webMail_upload">사진 업로드하기</string>
    <string name="str_webMail_send">메일 전송</string>
    <string name="str_verify">인증작가 신청</string>
    <string name="str_verify_title">신작 인증 작가</string>
    <string name="str_verify_explain_one">인증 작가가 되면 이름 옆에 인증작가 배지</string>
    <string name="str_verify_explain_two">가 붙고,</string>
    <string name="str_verify_explain_three">신작 추천 작품에 선정될 가능성이 높아집니다.</string>
    <string name="str_verify_step_one">1단계. 학교 인증</string>
    <string name="str_verify_step_two">2단계. 포트폴리오 링크</string>
    <string name="str_verify_step_two_explain">개인 웹사이트, Behance, ArtStation, Google Drive 등 링크 형식으로 포트폴리오를 첨부해주세요. 신청시 1~2일 정도 소요되며 링크는 최대 200자까지 입력 가능합니다.</string>
    <string name="str_verify_link_hint">링크를 입력하세요.</string>
    <string name="str_complete">완료</string>
    <string name="str_change">변경하기</string>
    <string name="str_next">다음</string>
    <string name="str_cancel">취소</string>
    <string name="str_apply">신청하기</string>
    <string name="str_graduate">대학생이 아니에요</string>
    <string name="str_next_time">다음에 하기</string>
    <string name="str_check">확인</string>
    <string name="str_ask_update_app">새 버전으로 업데이트가 필요해요.\n바로 업데이트 할까요?</string>
    <string name="str_go_store">스토어로 이동하기</string>
    <string name="str_login_subtitle">신세대의 작품을 만나다</string>
    <string name="str_login_naver">네이버로 시작하기</string>
    <string name="str_login_kakao">카카오로 시작하기</string>
    <string name="str_login_google">Google로 시작하기</string>
    <string name="str_login_sns">SNS계정으로 간편하게 시작하기</string>
    <string name="str_follow">팔로우</string>
    <string name="str_detail_spec">상세사이즈</string>
    <string name="str_spec_width">가로</string>
    <string name="str_spec_height">세로</string>
    <string name="str_artdetail_ask">거래 문의하기</string>
    <string name="str_artdetail_nagatiate_not">가격 제안 불가</string>
    <string name="str_artdetail_nagotiate">가격 제안하기</string>
    <string name="str_btn_report">신고하기</string>
    <string name="str_btn_block_artist">%s님 차단하기</string>
    <string name="str_block_explain">차단하면 서로 채팅을 보낼 수 없어요.\n차단하시겠어요?</string>
    <string name="str_btn_block">네, 차단할래요</string>
    <string name="str_btn_cancel">취소</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_btn_outsourcing_client">의뢰해요</string>
    <string name="str_btn_outsourcing_artist">작업해요</string>
    <string name="str_holder_school">%s·</string>
    <string name="str_title_chat">채팅</string>
    <string name="str_choose_category">카테고리 선택</string>
    <string name="str_choose_field">분야를 선택해 주세요</string>
    <string name="str_choose_category_plz">카테고리를 선택주세요</string>
    <string name="str_category_market">작품 판매</string>
    <string name="str_category_artist">작업해요</string>
    <string name="str_category_client">의뢰해요</string>
    <string name="str_submit_picture">사진 등록</string>
    <string name="str_write_art_info">작품 정보</string>
    <string name="str_count_won">원</string>
    <string name="str_enable_negotiation">가격제안 받기</string>
    <string name="str_done">완료</string>
    <string name="str_input_spec">대략의 작품 사이즈를 알려주세요.</string>
    <string name="str_spec_canvas">캔버스</string>
    <string name="str_spec_dimension">상세 사이즈</string>
    <string name="str_write_spec">작품 사이즈(선택)</string>
    <string name="str_canvas_shape">캔버스 형태</string>
    <string name="str_category_figure">Figure(인물형)</string>
    <string name="str_category_paysage">Paysage(풍경형)</string>
    <string name="str_category_marine">Marine(해경형)</string>
    <string name="str_category_square">Square(정방형)</string>
    <string name="str_dimension_canvas_size">호</string>
    <string name="str_canvas_size">캔버스 사이즈</string>
    <string name="str_centimeter">cm</string>
    <string name="str_meter">m</string>
    <string name="str_register_name_title">신작에서 사용할\n이름을 입력해주세요.</string>
    <string name="str_register_name_description">이름은 공백없이 2자 이상 12자 이하,\n기호는 - _ . 만 사용 가능합니다.</string>
    <string name="str_register_agree_service">서비스 이용 동의</string>
    <string name="str_register_agree_all">약관 전체 동의</string>
    <string name="str_register_agree_age">만 14세 이상입니다.</string>
    <string name="str_register_agree_require">(필수) 서비스 이용 약관</string>
    <string name="str_register_agree_personal">(필수) 개인정보 처리방침</string>
    <string name="str_register_agree_marketing">(선택) 마케팅 정보 수신동의</string>
    <string name="str_write_art_title">작품 제목</string>
    <string name="str_write_art_price">가격</string>
    <string name="str_write_art_description">작품 설명</string>
    <string name="str_write_art_description_hint">작품 의도, 작업 기간, 재료, 거래 방법 등을 자유롭게 표현해보세요.</string>
    <string name="str_register_undergrad">재학생 인증</string>
    <string name="str_register_graduated">졸업생 인증</string>
    <string name="str_name_check">중복확인</string>
    <string name="str_name_pass">멋진 이름이네요!</string>
    <string name="str_name_cant">사용불가능한 이름입니다</string>
    <string name="str_report">사용자 신고</string>
    <string name="str_report_type_title">%s\n사용자를 신고하는 이유를 선택해주세요.</string>
    <string name="str_report_type_seller">전문 판매업자 같아요</string>
    <string name="str_report_type_no_manner">비매너 사용자에요</string>
    <string name="str_report_type_sexual">성희롱을 해요</string>
    <string name="str_report_type_dispute">거래/ 환불 분쟁 신고</string>
    <string name="str_report_type_cheat">사기 당했어요</string>
    <string name="str_report_type_other">다른 문제가 있어요</string>
    <string name="str_report_content">신고 내용을 작성해주세요.</string>
    <string name="str_report_type">: %s</string>
    <string name="str_report_input_hint">신작이 조치를 취해드릴 수 있게 문제 상황을 최대한 구체적으로 설명해주세요.</string>
    <string name="str_report_input_length">글자 수 제한 %d/300</string>
    <string name="str_report_send_explain">신고하면 더 이상 채팅을 보낼 수 없어요.</string>
    <string name="str_app_name_kr">신작</string>
    <string name="str_art_artist_holder">%s 작가</string>
    <string name="str_btn_upload_picture">사진 업로드하기</string>
    <string name="str_holder_won">%s원</string>
    <string name="str_holder_univ_cert">%sverifed</string>
    <string name="str_author_follower_holder">팔로워 %d</string>
    <string name="str_holder_author">%s 작가</string>
    <string name="str_holder_author_">%s 작가 · </string>
    <string name="str_holder_dot"> · </string>
    <string name="str_holder_dot_">·</string>
    <string name="str_home_recent">최신 작품</string>
    <string name="str_home_title_category">장르별 작품</string>
    <string name="str_btn_chatroom_leave">채팅방 나가기</string>
    <string name="str_block_chat">차단하기</string>
</resources>