<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="io.sinzak.android.ui.main.profile.certification.VerifyViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.profile.certification.VerifyFragment">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_bg_button"
            android:onClick="@{v->vm.onBackPressed()}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/bold16"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/appbar_height"
            android:gravity="center"
            android:text="@string/str_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:paddingTop="25dp"
            android:paddingHorizontal="33dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_verify_title"
                style="@style/bold16"
                android:paddingHorizontal="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_verify_explain_one"
                    style="@style/regular13"
                    app:drawableEndCompat="@drawable/ic_profile_verify_active"
                    android:gravity="bottom"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_verify_explain_two"
                    style="@style/regular13"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_verify_explain_three"
                style="@style/regular13"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_verify_step_one"
                style="@style/bold16"
                android:paddingHorizontal="1dp"
                android:layout_marginTop="25.2dp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="18.5dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/medium16"
                    android:layout_width="97.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_edit_school"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{vm.profile.univ}"
                    style="@style/regular16"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/medium16"
                    android:layout_marginEnd="3.8dp"
                    android:text="@{!vm.profile.cert_uni ? @string/str_edit_auth_false : @string/str_edit_auth_true }"
                    android:textColor="@{!vm.profile.cert_uni ? @color/secondary : @color/gray60 }"
                    android:onClick="@{v-> vm.gotoCertificationPage(vm.profile.cert_uni)}"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_verify_step_two"
                style="@style/bold16"
                android:paddingHorizontal="1dp"
                android:layout_marginTop="25.2dp"/>
            <TextView
                style="@style/regular13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_verify_step_two_explain"
                android:layout_marginBottom="3.6dp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ll_certi_input"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp">

                <EditText
                    style="@style/regular13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/str_verify_link_hint"
                    android:textColorHint="@color/gray60"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@{vm.linkInput}"
                    android:onTextChanged="@{(cs,a,b,c) -> vm.linkInputText(cs)}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>




        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView2"
            style="@style/bold16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="25.5dp"
            android:background="@drawable/btn_red_filled"
            android:gravity="center"
            android:text="@string/str_apply"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="@{vm.buttonEnabled &amp; vm.profile.cert_uni}"
            android:onClick="@{v-> vm.onSubmit(vm.profile.cert_celeb, vm.profile.portFolioUrl)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>