<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="blockArtist"
            type="android.view.View.OnClickListener" />

        <variable
            name="leaveChatroom"
            type="android.view.View.OnClickListener" />

        <variable
            name="reportArtist"
            type="android.view.View.OnClickListener" />

        <variable
            name="dismiss"
            type="android.view.View.OnClickListener" />

        <variable
            name="artist"
            type="String" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:theme="@style/AlertDialogStyle"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white_filled"
            android:orientation="vertical">

            <TextView
                android:onClick="@{reportArtist}"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/str_block_chat"
                style="@style/medium16"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray60"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:onClick="@{reportArtist}"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/str_btn_report"
                style="@style/medium16"
                android:gravity="center"/>

           <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray60"
                android:layout_marginHorizontal="8dp"
                />

            <TextView
                android:onClick="@{leaveChatroom}"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/str_btn_chatroom_leave"
                style="@style/medium16"
                android:textColor="@color/secondary"
                android:gravity="center"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/str_btn_cancel"
            style="@style/bold16"
            android:layout_marginBottom="26dp"
            android:onClick="@{dismiss}"
            android:background="@drawable/btn_white_filled"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
